--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "next-shadcn-aceternity-ts-starter",
-	"version": "1.0.0",
+	"name": "portfolio-project",
+	"version": "1.6.24",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -14,9 +14,12 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.2.10",
 		"lucide-react": "^0.395.0",
+		"mini-svg-data-uri": "^1.4.4",
 		"next": "14.2.4",
+		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-icons": "^5.2.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
