--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.0.2",
+		"@react-three/drei": "^9.107.0",
+		"@react-three/fiber": "^8.16.8",
+		"@tabler/icons-react": "^3.6.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.2.10",
@@ -20,18 +23,23 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
+		"react-lottie": "^1.2.4",
 		"tailwind-merge": "^2.3.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.165.0",
+		"three-globe": "^2.31.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-lottie": "^1.2.10",
+		"@types/three": "^0.165.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
 		"postcss": "^8",
 		"prettier": "^3.3.2",
-		"prettier-plugin-tailwindcss": "^0.6.4",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5"
 	}
