--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@react-three/drei": "^9.107.0",
 		"@react-three/fiber": "^8.16.8",
+		"@sentry/nextjs": "8",
 		"@tabler/icons-react": "^3.6.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
