--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.0",
-		"@react-three/drei": "^9.108.4",
+		"@react-three/drei": "^9.109.1",
 		"@react-three/fiber": "^8.16.8",
 		"@sentry/nextjs": "8",
 		"@tabler/icons-react": "^3.11.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.3.4",
-		"lucide-react": "^0.408.0",
+		"framer-motion": "^11.3.8",
+		"lucide-react": "^0.414.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "14.2.5",
 		"next-themes": "^0.3.0",
@@ -43,5 +43,6 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tailwindcss": "^3.4.6",
 		"typescript": "^5"
-	}
+	},
+	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
