--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.0",
-		"@react-three/drei": "^9.109.1",
+		"@react-three/drei": "^9.109.2",
 		"@react-three/fiber": "^8.16.8",
-		"@sentry/nextjs": "8",
+		"@sentry/nextjs": "^8.22.0",
 		"@tabler/icons-react": "^3.11.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.3.8",
+		"framer-motion": "^11.3.21",
 		"lucide-react": "^0.414.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "14.2.5",
 		"next-themes": "^0.3.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-icons": "^5.2.1",
 		"react-lottie": "^1.2.4",
 		"tailwind-merge": "^2.4.0",
@@ -31,18 +31,18 @@
 		"three-globe": "^2.31.1"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@types/node": "^20.14.13",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"@types/react-lottie": "^1.2.10",
 		"@types/three": "^0.166.0",
-		"eslint": "^8",
+		"eslint": "^8.57.0",
 		"eslint-config-next": "14.2.5",
-		"postcss": "^8",
+		"postcss": "^8.4.40",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.5",
-		"tailwindcss": "^3.4.6",
-		"typescript": "^5"
+		"tailwindcss": "^3.4.7",
+		"typescript": "^5.5.4"
 	},
 	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
