--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "portfolio-project",
-	"version": "1.8.24",
+	"name": "portfolio-website-project",
+	"version": "1.9.24",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -10,39 +10,38 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.0",
-		"@react-three/drei": "^9.109.5",
-		"@react-three/fiber": "^8.17.4",
-		"@sentry/nextjs": "^8.25.0",
-		"@tabler/icons-react": "^3.12.0",
+		"@react-three/drei": "^9.115.0",
+		"@react-three/fiber": "^8.17.10",
+		"@sentry/nextjs": "^8.36.0",
+		"@tabler/icons-react": "^3.21.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.3.24",
+		"framer-motion": "^11.11.10",
 		"lucide-react": "^0.414.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "14.2.5",
 		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-icons": "^5.2.1",
+		"react-icons": "^5.3.0",
 		"react-lottie": "^1.2.4",
-		"tailwind-merge": "^2.4.0",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.166.1",
-		"three-globe": "^2.31.1"
+		"three-globe": "^2.34.3"
 	},
 	"devDependencies": {
-		"@types/node": "^20.14.15",
-		"@types/react": "^18.3.3",
-		"@types/react-dom": "^18.3.0",
+		"@types/node": "^20.17.4",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
 		"@types/react-lottie": "^1.2.10",
 		"@types/three": "^0.166.0",
-		"eslint": "^8.57.0",
+		"eslint": "^8.57.1",
 		"eslint-config-next": "14.2.5",
-		"postcss": "^8.4.41",
+		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.6",
-		"tailwindcss": "^3.4.9",
-		"typescript": "^5.5.4"
-	},
-	"packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	}
 }
