refactor: disable source maps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
 			"@/cms/*": ["./src/app/(cms)/*"],
 			"@/components/*": ["./src/components/*"],
 			"@/lib/*": ["./src/lib/*"]
-		}
+		},
+		"target": "ES2017"
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
