--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio-websites-project",
-	"version": "1.9.24",
+	"version": "2.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -10,39 +10,38 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.0",
-		"@react-three/drei": "^9.119.0",
+		"@react-three/drei": "^9.120.4",
 		"@react-three/fiber": "^8.17.10",
-		"@sentry/nextjs": "^8.41.0",
-		"@tabler/icons-react": "^3.23.0",
+		"@sentry/nextjs": "^8.43.0",
+		"@tabler/icons-react": "^3.24.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.12.0",
+		"framer-motion": "^11.13.5",
 		"lucide-react": "^0.462.0",
 		"mini-svg-data-uri": "^1.4.4",
-		"next": "14.2.5",
-		"next-themes": "^0.4.3",
+		"next": "^14.2.20",
+		"next-themes": "^0.4.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-icons": "^5.3.0",
+		"react-icons": "^5.4.0",
 		"react-lottie": "^1.2.10",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.171.0",
-		"three-globe": "^2.35.3"
+		"three-globe": "^2.35.6"
 	},
 	"devDependencies": {
-		"@types/node": "^22.10.1",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@types/node": "^22.10.2",
+		"@types/react": "^18.3.16",
+		"@types/react-dom": "^18.3.5",
 		"@types/react-lottie": "^1.2.10",
 		"@types/three": "^0.170.0",
 		"eslint": "^8.57.1",
-		"eslint-config-next": "14.2.5",
+		"eslint-config-next": "^14.2.20",
 		"postcss": "^8.4.49",
-		"prettier": "^3.4.1",
+		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "^3.4.15",
+		"tailwindcss": "^3.4.16",
 		"typescript": "^5.7.2"
-	},
-	"packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
+	}
 }
