--- a/package.json
+++ b/package.json
@@ -9,39 +9,39 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@radix-ui/react-slot": "^1.1.1",
-		"@react-three/drei": "^9.120.4",
-		"@react-three/fiber": "^8.17.10",
-		"@sentry/nextjs": "^8.45.0",
-		"@tabler/icons-react": "^3.24.0",
+		"@radix-ui/react-slot": "^1.1.2",
+		"@react-three/drei": "^9.121.4",
+		"@react-three/fiber": "^8.17.14",
+		"@sentry/nextjs": "^8.55.0",
+		"@tabler/icons-react": "^3.30.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"framer-motion": "^11.14.4",
+		"framer-motion": "^11.18.2",
 		"lucide-react": "^0.462.0",
 		"mini-svg-data-uri": "^1.4.4",
-		"next": "^14.2.20",
+		"next": "^14.2.24",
 		"next-themes": "^0.4.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.4.0",
 		"react-lottie": "^1.2.10",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.171.0",
-		"three-globe": "^2.35.9"
+		"three-globe": "^2.41.12"
 	},
 	"devDependencies": {
-		"@types/node": "^22.10.2",
-		"@types/react": "^18.3.16",
+		"@types/node": "^22.13.2",
+		"@types/react": "^18.3.18",
 		"@types/react-dom": "^18.3.5",
 		"@types/react-lottie": "^1.2.10",
 		"@types/three": "^0.170.0",
 		"eslint": "^8.57.1",
-		"eslint-config-next": "^14.2.20",
-		"postcss": "^8.4.49",
-		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.9",
-		"tailwindcss": "^3.4.16",
-		"typescript": "^5.7.2"
+		"eslint-config-next": "^14.2.24",
+		"postcss": "^8.5.2",
+		"prettier": "^3.5.1",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^3.4.17",
+		"typescript": "5.7.2"
 	}
 }
