--- a/package.json
+++ b/package.json
@@ -43,5 +43,10 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"tailwindcss": "^3.4.17",
 		"typescript": "5.7.2"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"sharp"
+		]
 	}
 }
